@@ -1,5 +1,10 @@
 2011-05-31  Paul Brook  <paul@codesourcery.com>
 
+	* gas/arm/ldr-global.d: New test.
+	* gas/arm/ldr-global.s: New test.
+
+2011-05-31  Paul Brook  <paul@codesourcery.com>
+
 	* arm/t2-branch-global.d: New test.
 	* arm/t2-branch-global.s: New test.
 
